[gd_scene load_steps=12 format=3 uid="uid://daniimopijcej"]

[ext_resource type="Script" path="res://scripts/entities/cultist/cultist.gd" id="1_tynvq"]
[ext_resource type="Texture2D" uid="uid://dns1vct4r7083" path="res://assets/art/cultist/Base.png" id="2_c7eqh"]
[ext_resource type="Texture2D" uid="uid://d0bohoeyuh0mj" path="res://assets/art/cultist/Doubt.png" id="3_dbwxu"]
[ext_resource type="Texture2D" uid="uid://b0yslf8oegw8e" path="res://assets/art/cultist/Dissent.png" id="4_2fl15"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="5_bn1j0"]
[ext_resource type="Script" path="res://scripts/entities/cultist/base_state.gd" id="6_na3dj"]
[ext_resource type="Script" path="res://scripts/entities/cultist/doubt_state.gd" id="7_v7rqq"]
[ext_resource type="Script" path="res://scripts/entities/cultist/dissent_state.gd" id="8_hqr6k"]
[ext_resource type="Script" path="res://scripts/entities/cultist/server_state.gd" id="9_1m7wo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_apl2j"]
size = Vector2(36, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_ji2x6"]
radius = 147.014

[node name="Cultist" type="CharacterBody2D"]
collision_layer = 7
script = ExtResource("1_tynvq")

[node name="Sprites" type="Node2D" parent="."]

[node name="Base" type="Sprite2D" parent="Sprites"]
position = Vector2(0, -45)
texture = ExtResource("2_c7eqh")

[node name="Doubt" type="Sprite2D" parent="Sprites"]
visible = false
position = Vector2(0, -45)
texture = ExtResource("3_dbwxu")

[node name="Dissent" type="Sprite2D" parent="Sprites"]
visible = false
position = Vector2(0, -45)
texture = ExtResource("4_2fl15")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_apl2j")

[node name="AreaOfInfluence" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfInfluence"]
shape = SubResource("CircleShape2D_ji2x6")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("5_bn1j0")
current_state = NodePath("Base")

[node name="Base" type="Node" parent="StateMachine" node_paths=PackedStringArray("entity")]
script = ExtResource("6_na3dj")
entity = NodePath("../..")

[node name="Doubt" type="Node" parent="StateMachine" node_paths=PackedStringArray("entity")]
script = ExtResource("7_v7rqq")
entity = NodePath("../..")

[node name="Dissent" type="Node" parent="StateMachine" node_paths=PackedStringArray("entity")]
script = ExtResource("8_hqr6k")
entity = NodePath("../..")

[node name="Server" type="Node" parent="StateMachine" node_paths=PackedStringArray("entity")]
script = ExtResource("9_1m7wo")
entity = NodePath("../..")

[node name="DoubtTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DissentTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DoubtTimer" to="StateMachine/Doubt" method="_on_doubt_timer_timeout"]
[connection signal="timeout" from="DissentTimer" to="StateMachine/Dissent" method="_on_dissent_timer_timeout"]
